Fixed image stretching

--- a/styles/Cards.module.scss
+++ b/styles/Cards.module.scss
@@ -61,8 +61,6 @@
     top: 0;
     bottom: 0;
     margin: auto;
-    height: 100px;
-    width: fit-content;
   }
 
   &_title {
